// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upper Menu should render 1`] = `
<div
  className="upper-menu "
  data-testid="upper-menu"
>
  <div
    className="upper-menu_left"
    data-testid="upper-menu-title"
  >
    Section Name
  </div>
  <div
    className="upper-menu_right"
  >
    <div
      className="upper-menu-notifications"
    >
      <button
        className="upper-menu-icon"
        data-testid="upper-menu-notif-icon"
        onClick={[Function]}
        type="button"
      >
        <div
          className="badge_small"
        >
          6
        </div>
        <span
          className="material-icons"
        >
          notifications
        </span>
      </button>
    </div>
    <div
      className="avatar-wrapper"
    >
      <img
        alt="avatar icon"
        className="avatar_xsmall"
        src="https://www.w3schools.com/howto/img_avatar.png"
      />
      <div
        className="avatar-text-wrapper"
      >
        <span
          className="avatar-title"
        >
          Patrick Doe
        </span>
        <span
          className="avatar-subtitle"
        >
          Regional Manager
        </span>
      </div>
    </div>
    <div
      className="dropdown upper-menu-dropdown"
      data-show={false}
    >
      <div
        className="dropdown-button "
        onClick={[Function]}
      >
        <button
          className="upper-menu-info"
          data-testid="upper-menu-more-info"
          type="button"
        >
          <span
            className="material-icons"
          >
            more_vert
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Upper Menu without test id should render 1`] = `
<div
  className="upper-menu "
>
  <div
    className="upper-menu_left"
  >
    Section Name
  </div>
  <div
    className="upper-menu_right"
  >
    <div
      className="upper-menu-notifications"
    >
      <button
        className="upper-menu-icon"
        onClick={[Function]}
        type="button"
      >
        <div
          className="badge_small"
        >
          6
        </div>
        <span
          className="material-icons"
        >
          notifications
        </span>
      </button>
    </div>
    <div
      className="avatar-wrapper"
    >
      <img
        alt="avatar icon"
        className="avatar_xsmall"
        src="https://www.w3schools.com/howto/img_avatar.png"
      />
      <div
        className="avatar-text-wrapper"
      >
        <span
          className="avatar-title"
        >
          Patrick Doe
        </span>
        <span
          className="avatar-subtitle"
        >
          Regional Manager
        </span>
      </div>
    </div>
    <div
      className="dropdown upper-menu-dropdown"
      data-show={false}
    >
      <div
        className="dropdown-button "
        onClick={[Function]}
      >
        <button
          className="upper-menu-info"
          type="button"
        >
          <span
            className="material-icons"
          >
            more_vert
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
